<resources>
    <string name="app_name">FootBall Score Counter</string>
    <string name="team_a">Team A</string>
    <string name="score">0</string>
    <string name="_6_points">+6 points</string>
    <string name="_3_points">+3 points</string>
    <string name="_2_points">+2 points</string>
    <string name="free_throw">+1 point</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
</resources>